# selo

./: Cargo.toml  README.md
math/: Cargo.toml
math/src/: conversions.rs  embedded_primitive.rs  lib.rs  primitives.rs  utils.rs  working_plane.rs
math/src/primitives/: line.rs  linestring.rs  mod.rs  polygon.rs  ring.rs  triangle.rs
selo/: Cargo.toml
selo/examples/: thing.rs
selo/src/: embedded_primitive.rs  errors.rs  lib.rs  point.rs  utils.rs  working_plane.rs  workplane.rs
selo/src/algorithms/: grouping.rs  line_intersection.rs  mod.rs  simplify.rs  split.rs
selo/src/primitives/: geometry.rs  line.rs  linestring.rs  mod.rs  polygon.rs  ring.rs  triangle.rs
selo/src/traits/: apply_geo.rs  area.rs  boolops.rs  buffer.rs  center.rs  contains.rs  convert.rs  dedup_points.rs  expand.rs  flip.rs  inside_equal.rs  lines_iter.rs  map.rs  mod.rs  orient.rs  orientation.rs  points_iter.rs
selo/src/traits/convert/: mod.rs  to_geo.rs  to_selo.rs
selo/src/traits/intersection/: lines.rs  mod.rs
selo/src/wkt/: mod.rs
selo/tests/: area.rs
testapp/: Cargo.toml
testapp/examples/: broken_union.rs
testapp/src/: camera.rs  gizmos.rs  lib.rs  line.rs  point.rs  pointer.rs  polygon.rs  ring.rs  spawner.rs  state.rs  triangle.rs  working_plane.rs  workplane.rs
testapp/src/algos/: algostate.rs  line_intersection.rs  mod.rs  polygon_boolops.rs  polygon_expand.rs  polygon_triangulate.rs  stitch_polygons.rs  straight_skeleton.rs  working_planes.rs  workplanes.rs
testapp/src/parsing/: geo_debug.rs  mod.rs  old_geo_debug.rs  rust_debug.rs  selo_debug.rs  wkt.rs
