[workspace]
resolver = "2"
members = ["selo", "testapp"]

[workspace.dependencies]
geo = { git = "https://github.com/RobWalt/geo.git", branch = "feat/spade-boolops" }
bevy_math = "0.15"
# TODO: update RobWalt's repo to point to patched geo in geo-buffer
geo-buffer = { git = "https://github.com/no-materials/geo-buffer.git" }
bevy_reflect = "0.15"

strum = "0.26"
itertools = "0.13"

bevy = "0.15"
bevy-inspector-egui = "0.29"
bevy_egui = "0.33"

serde = "1.0"

selo = { path = "selo" }

# ===========
# dev profile
# ===========

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
lto = false

# ===============
# release profile
# ===============

# https://nnethercote.github.io/perf-book/build-configuration.html#maximizing-runtime-speed
[profile.release]
# https://nnethercote.github.io/perf-book/build-configuration.html#optimization-level
opt-level = "s"
# https://nnethercote.github.io/perf-book/build-configuration.html#codegen-units
codegen-units = 1
# https://nnethercote.github.io/perf-book/build-configuration.html#link-time-optimization
lto = "fat"
