[workspace]
resolver = "2"
members = ["selo", "testapp"]

[workspace.dependencies]
geo = { version = "0.29", default-features = false, features = ["multithreading", "spade"] }
bevy_math = { git = "https://github.com/MetabuildDev/bevy.git", rev = "713b957bc1596ef7c387b934fb945addb30916f1" }
# TODO: update RobWalt's repo to point to patched geo in geo-buffer
geo-buffer = { git = "https://github.com/no-materials/geo-buffer.git" }
bevy_reflect = { git = "https://github.com/MetabuildDev/bevy.git", rev = "713b957bc1596ef7c387b934fb945addb30916f1" }

strum = "0.26"
itertools = "0.13"

bevy = { git = "https://github.com/MetabuildDev/bevy.git", rev = "" }
bevy-inspector-egui = { git = "https://github.com/MetabuildDev/bevy-inspector-egui.git", rev = "0a7f7cae030c58efdf79de8b4f195626dcd5e057" }
bevy_egui = { git = "https://github.com/MetabuildDev/bevy_egui.git", rev = "a4c47f102df1a9954e4278d799530b63283fa43e" }


serde = "1.0"

selo = { path = "selo" }


# ===========
# dev profile
# ===========

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
lto = false

# ===============
# release profile
# ===============

# https://nnethercote.github.io/perf-book/build-configuration.html#maximizing-runtime-speed
[profile.release]
# https://nnethercote.github.io/perf-book/build-configuration.html#optimization-level
opt-level = "s"
# https://nnethercote.github.io/perf-book/build-configuration.html#codegen-units
codegen-units = 1
# https://nnethercote.github.io/perf-book/build-configuration.html#link-time-optimization
lto = "fat"
