[package]
name = "selo"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/MetabuildDev/selo.git"
description = "glam-based 2d and 3d geometric primitives with geo interoperability"


[features]
default = []
wkt = ["dep:serde", "dep:wkt"]
bevy_reflect = ["dep:bevy_reflect"]

[dependencies]
geo.workspace = true
glam.workspace = true
bevy_math.workspace = true
geo-buffer.workspace = true
itertools.workspace = true
num-traits = "0.2"
thiserror = "1.0"
serde = { workspace = true, optional = true }
wkt = { version = "0.11", optional = true }

bevy_reflect = { workspace = true, optional = true}

[dev-dependencies]
serde_json = "1.0"
