[package]
name = "selo"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/MetabuildDev/selo.git"
description = "bevy_math-based 2d and 3d geometric primitives with geo interoperability"


[features]
default = []
wkt = ["dep:wkt"]
bevy_reflect = ["dep:bevy_reflect"]

[dependencies]
geo.workspace = true
bevy_math = { workspace = true, features = [ "bevy_reflect", "serialize" ] }
geo-buffer.workspace = true
itertools.workspace = true
num-traits = "0.2"
thiserror = "1.0"
serde = { workspace = true, features = [ "derive" ] }
wkt = { version = "0.11", optional = true }
i_overlay = "=1.7.2" 
derive_more = { version = "1", features = ["from"] }

bevy_reflect = { workspace = true, optional = true}

[dev-dependencies]
serde_json = "1.0"
