[package]
name = "testapp"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy.workspace = true
bevy-inspector-egui.workspace = true
bevy_egui.workspace = true
bevy_mod_picking.workspace = true

strum = { workspace = true, features = ["derive"] }
itertools.workspace = true

selo = { workspace = true, features = ["bevy_reflect"] }

winnow = "0.6.20"
anyhow = "1.0"
wkt = "0.11.1"
